@@ -9,6 +9,7 @@ gtk2-engines-oxygen (1.0.2-2) UNRELEASED; urgency=low
     - local-options: Added with "unapply-patches".
     - options: Added to ensure BZip2 compression.
   * debian/compat: Raised to 8.
+  * debian/rules: Ensure minimal linking.
 
  -- Kai Wasserbäch <curan@debian.org>  Sun, 20 Feb 2011 10:37:21 +0100
 
